feat: adiciona callback de publicação MQTT para processar dados e atualizar o estado da máquina
- Adiciona a função mqtt_pub_data_cb para processar dados recebidos via MQTT.
- Verifica o tamanho da mensagem e a converte para um ID.
- Encontra a máquina correspondente ao ID e verifica se precisa de assistência.
- Atualiza o estado da máquina e a fila de espera conforme necessário.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,8 @@
         "string.h": "c",
         "tcp.h": "c",
         "mqtt_priv.h": "c",
-        "main.h": "c"
+        "main.h": "c",
+        "mqtt.h": "c",
+        "altcp_tls.h": "c"
     }
 }
